overlap fix

--- a/webapp/src/main/webapp/resources/css/stylesheet.css
+++ b/webapp/src/main/webapp/resources/css/stylesheet.css
@@ -850,7 +850,7 @@ th, td {
 
 .edit-class {
     position: absolute;
-    top: 90px;
+    bottom: 10px;
     right: 10px;
     z-index: 30;
 }
